<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hades.garbage.HomeMember"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:measureWithLargestChild="false"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar1"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.hades.garbage.fragment.MemberMap" />
         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/place_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="23dp"
                    android:src="@drawable/ic_map_marker" />
            </RelativeLayout>

                <!--<fragment-->
                    <!--android:id="@+id/place_autocomplete_fragment"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
                    <!--/>-->


            <LinearLayout
                android:id="@+id/driverInfo"
                android:layout_width="match_parent"
                android:layout_height="258dp"
                android:layout_gravity="bottom"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:visibility="gone">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/driverProfileImage"
                    android:layout_width="100sp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:padding="20sp"
                    android:src="@drawable/ic_male_user" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20sp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/driverName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:padding="10dp"
                            android:text="Name"
                            android:textSize="16dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="#ACACAC"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/driverPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:padding="10dp"
                            android:text="Phone"
                            android:textSize="16dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="#ACACAC"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:padding="10dp"
                            android:text="Biaya Jarak     :"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/cost_driver"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:text=""
                            android:inputType="number"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:textSize="14sp"/>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="#ACACAC"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cost_sampah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:padding="10dp"
                            android:text=""
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="#ACACAC"/>



                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp">
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/btn_call_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttonstylegreen"
                    android:text="@string/call"
                    android:textColor="#fff" />


            </LinearLayout>



            <LinearLayout
                android:background="@android:color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/sampah1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampah_kering"
                        android:textSize="10dp"/>

                    <RadioButton
                        android:id="@+id/sampah2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampah_basah"
                        android:textSize="10dp"/>

                    <RadioButton
                        android:id="@+id/sampah3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampah_campuran"
                        android:textSize="10dp"/>
                </RadioGroup>




                    </LinearLayout>
        </FrameLayout>

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigasi_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigasi_header"
        app:menu="@menu/item_navigasi">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
